rabbitmq/rabbitmq-rabbitmq-messaging-topology-operator_NetworkPolicy_rabbitmq.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: messaging-topology-operator
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rabbitmq-cluster-operator
    app.kubernetes.io/part-of: rabbitmq
    app.kubernetes.io/version: 2.12.1
    helm.sh/chart: rabbitmq-cluster-operator-4.4.7
  name: rabbitmq-rabbitmq-messaging-topology-operator
  namespace: rabbitmq
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 9443
    - port: 8080
  podSelector:
    matchLabels:
      app.kubernetes.io/component: messaging-topology-operator
      app.kubernetes.io/instance: rabbitmq
      app.kubernetes.io/name: rabbitmq-cluster-operator
      app.kubernetes.io/part-of: rabbitmq
  policyTypes:
  - Ingress
  - Egress
